Logic up and running

--- a/client/templates/gameInterface.html
+++ b/client/templates/gameInterface.html
@@ -44,15 +44,15 @@
 		<form>
 			 <div class="row">
       				<label for="exampleEmailInput">How many Bushels to feed?</label>
-      				<input type="number" placeholder="0 Bushels" id="bushelsToFeed">
+      				<input type="number" placeholder="0 Bushels" value="0"  id="bushelsToFeed">
     		</div>
     		<div class="row">
       				<label for="exampleEmailInput">How many Acres to seed?</label>
-      				<input type="number" placeholder="1 Bushels = 1 seeded" id="seedOrder">
+      				<input type="number" placeholder="1 Bushels = 1 seeded" value="0"  id="seedOrder">
     		</div>
   			<div class="row">
       				<label for="exampleEmailInput">Acres are worth {{price}} Bushels</label>
-      				<input type="number" placeholder="Buy 0 Arces" id="acresOrder">
+      				<input type="number" placeholder="Buy 0 Arces" value="0" id="acresOrder">
     		</div>
     		<input class="button-primary" type="submit" value="Command">
     	</form>
