Added turn logic, lobby

--- a/client/templates/gameInterface.html
+++ b/client/templates/gameInterface.html
@@ -87,7 +87,8 @@
 <template name="score">
 	<tr>
 		<td>{{monarch}}</td>
-		<td>{{population}}</td>		  			
+		<td>{{population}}</td>
+		<td>{{turnMade}}</td>	  			
 	</tr>
 </template>
 
@@ -99,6 +100,7 @@
 	    			<tr>
 	    				<th>Monarch</th>
 	    				<th>Population</th>
+	    				<th>Turn Made?</th>
 	    			</tr>
 	    		</thead>
 	  			<tbody>
