--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,18 @@
+#fade {
+  animation: fadein 8s; 
+}
+
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+
+body {
+  background-color: #FFFEF8;
+}
+
 /* Sections
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .section {
