--- a/client/templates/gameInterface.html
+++ b/client/templates/gameInterface.html
@@ -6,6 +6,8 @@
 			<h5>Year {{year}}</h5>
 		</div>
 
+		{{#if gameNotOver}}
+
 		<div class="row">
 			<p>{{advice}}</p>
   		</div>
@@ -31,10 +33,12 @@
 		  				<td>Arces</td>
 		  				<td>{{acres}}</td>		  			
 	 				</tr>
+	 				<!--
 	 				<tr>
 		  				<td>Soliders</td>
 		  				<td>{{soliders}}</td>		  			
 	 				</tr>
+	 			-->
 	 			</tbody>
 	 		</table>
  		</div>
@@ -52,6 +56,7 @@
       				<label for="exampleEmailInput">Buy or sell acres @ {{price}} Bushels</label>
       				<input type="number" placeholder="Buy 0 Arces" value="0" id="acresOrder">
     		</div>
+    		<!--
     		<div class="row">
       				<label for="exampleEmailInput">Train soliders @ {{solidersPrice}} Bushels</label>
       				<input type="number" placeholder="" value="0" id="solidersTrain">
@@ -69,10 +74,16 @@
 
 						</select>
     		</div>
-
+-->
 
     		<input class="button-primary" type="submit" value="Command">
     	</form>
+
+    	{{else}}
+
+    	<p>Your kingdom collapsed. {{totalStarved}} people starved in total.</p>
+
+    	{{/if}}
 
     	{{/with}}
 
