--- a/client/style.css
+++ b/client/style.css
@@ -11,6 +11,18 @@
 
 body {
   background-color: #FFFEF8;
+  max-width: 400px;
+  padding: auto;
+  margin: auto;
+}
+
+strong, em, p{
+  text-align: left;
+  padding-left: 15px;
+  padding-right: 15px;
+  line-height: 25px; 
+  padding-bottom: 10px;
+  margin: 0px;
 }
 
 /* Sections
